[gd_scene load_steps=3 format=3 uid="uid://dsp8gul8c7mdb"]

[ext_resource type="Script" path="res://GameOverScreen.gd" id="1_6k517"]
[ext_resource type="FontFile" uid="uid://b05abb6xberv3" path="res://Fonts/VCR_OSD_MONO.ttf" id="2_geolh"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6k517")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LblGameOverText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("2_geolh")
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LblFinalScore" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Final Score: 00000000000"

[node name="LblContinue" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Press 'Space' to continue"

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="ContinueTimer" to="." method="_on_continue_timer_timeout"]
